[package]
name = "time_dependent_mdp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
csv = "1.1.6"
ndarray = { version = "0.15.6", features = ["serde"] }
rand = { version = "0.8.5" }
serde = "1.0"
serde-pickle = "1.0"
rayon = "1.7.0"

[profile.release]
debug = true
